--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -1,8 +1,15 @@
 name: CI
 
-on:
+  push:
+    branches: [ main ]
+    paths:
+      - "src/**"
+      - "test/**"
   pull_request:
     branches: [ main ]
+    paths:
+      - "src/**"
+      - "test/**"
 
 jobs:
   build:
