--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@types/jest": "latest",
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/v3-sdk": "^3.8.1",
     "husky": "latest",
     "jest": "latest",
     "lint-staged": "latest",
