update dodo pool

--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -30,3 +30,12 @@ jobs:
       - run: yarn test
         env:
           ALCHEMY_POLYGON_RPC_URL: ${{ secrets.ALCHEMY_POLYGON_RPC_URL }}
+
+  docker:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Docker Build
+        run: |
+          source startup.sh
