:bug: update tests

--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -39,3 +39,5 @@ jobs:
       - name: Docker Build
         run: |
           source startup.sh
+        env:
+          ALCHEMY_POLYGON_RPC_URL: ${{ secrets.SAMPLE_PRIVATE_KEY }}
